# optimizedmovingaveragesc

./: .gitignore  README.md  pyproject.toml
